syntax = "proto3";
option csharp_namespace = "MySpace.WebAPI.Services";
import "models/category_model.proto";
package my_space;

service Categories {

	rpc Create(NewCategory) returns(CategoryData);
	rpc GetById(CategoryDataRequest) returns(OneCategoryData);
	rpc Edit(EditCategory) returns(CategoryData);
	rpc Delete(DeleteCategoryRequest) returns(DeleteCategory);

	rpc ListAll(ListCategoriesRequest) returns(ListCategories);
	
	
}